create, update news

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ node_modules
 # local env files
 .env.local
 .env.*.local
-.env
+.env.*
 
 # Log files
 npm-debug.log*
@@ -23,5 +23,5 @@ pnpm-debug.log*
 *.sln
 *.sw?
 
-package-log.json
+package-lock.json
 package.json
