--- a/package.json
+++ b/package.json
@@ -10,18 +10,16 @@
     "@splidejs/vue-splide": "^0.6.12",
     "@vueup/vue-quill": "^1.2.0",
     "@vueuse/motion": "^2.0.0",
-    "ant-design-vue": "^4.0.7",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "bootstrap-vue": "^2.23.1",
     "chart.js": "^4.4.1",
-    "chartjs": "^0.3.24",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3",
-    "vue3-apexcharts": "^1.4.4",
     "vue3-emoji-picker": "^1.1.7",
     "vue3-toastify": "^0.1.13",
     "vuex": "^4.0.0"
